--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
 bady {
  min-height: 200px;
  font-size: 1.2rem;
- font-family: 'work sans', 'sans-serif';
+ font-family: 'work sans', sans-serif;
  
  }
+.hero {
+min-height: 100vh;
+ backgraund-color: black;
+ 
+}
