--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ bady {
  }
 .hero {
  min-height: 100vh;
- backgraund-color: black;
- font-color: white;
+ background-color: black;
+ text-color: white;
  
 }
 .hero h1 {
