--- a/simplyCountdown.theme.default.css
+++ b/simplyCountdown.theme.default.css
@@ -13,7 +13,7 @@
   justify-content:center;
   float:left;
   margin:15px;
-  background:var --pink;
+  background: pink;
   box-shadow:0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24)}
 .simply-countdown>.simply-section .simply-amount,.simply-countdown>.simply-section .simply-word{
   display:block;
