--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 :root{
  --pink: #f14e95;
  --bg: #0a0a0a;
+ --shadow: 0 2px 2px rgb(0, 0, 0 / 0.5);
  
  }
 
 bady {
- min-high: 2000px;
+ min-height: 2000px;
  font-size: 1.2rem;
  font-family: 'work sans', sans-serif;
  
  }
 .hero {
- min-high: 100vh;
+ min-height: 100vh;
  background-color: var(--bg);
  color: white;
  
