--- a/style.css
+++ b/style.css
@@ -11,9 +11,21 @@ bady {
  font-family: 'work sans', sans-serif;
  
  }
+.hero:: before {
+  content:'';
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+ background-image: url(wedding1.jpg);
+ z-index: -1;
+}
+
+
 .hero {
+ position: relative;
  min-height: 100vh;
- background-color: var(--bg);
  color: white;
  
 }
