--- a/style.css
+++ b/style.css
@@ -14,11 +14,11 @@ bady {
 .hero::before {
   content:'';
  position: absolute;
- top: 0;
- left: 0;
  width: 100%;
  height: 100%;
- background-image: url(wedding2.jpg);
+ margin-top: 300px;
+ margin-left: 60px;
+ background-image: url(wedding1.jpg);
  z-index: -1;
 }
 
