--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ bady {
  position: absolute;
  width: 100%;
  height: 100%;
- margin-top: 300px;
- margin-left: 60px;
+ top: -300px;
+ left: -60px;
  background-image: url(wedding1.jpg);
  z-index: -1;
 }
