--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-:root{
+8:root{
  --pink: #f14e95;
  --bg: #0a0a0a;
  --shadow: 0 2px 2px rgb(0, 0, 0 / 0.5);
@@ -16,8 +16,9 @@ bady {
  position: absolute;
  width: 100%;
  height: 100%;
- top: -300px;
- left: -60px;
+ top: ;
+ left: 0;
+ right: 0;
  background-image: url(wedding1.jpg);
  z-index: -1;
 }
