--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ bady {
  position: absolute;
  width: 100%;
  height: 100%;
- top: ;
+ top: 0;
  left: 0;
  right: 0;
  background-image: url(wedding1.jpg);
