--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ bady {
  height: 100%;
  top: 0;
  left: 0;
- background-image: url(wedding3.jpg);
+ background-image: url(wedding1.jpg);
+ background-size: cover;
  z-index: -1;
 }
 
