--- a/simplyCountdown.theme.default.css
+++ b/simplyCountdown.theme.default.css
@@ -24,3 +24,23 @@
 .simply-countdown>.simply-section .simply-amount {
   font-size: 1.5rem
 }
+
+@media(max-width: 992px) {
+  .simply-countdown>.simply-section {
+    padding: 70px;
+  }
+}
+
+@media(max-width: 768px) {
+  .simply-countdown>.simply-section {
+    padding: 60px;
+    margin: 5px;
+  }
+}
+
+@media(max-width: 576px) {
+  .simply-countdown>.simply-section {
+    pandding: 45px;
+    margin: 3px;
+  }
+}
