--- a/style.css
+++ b/style.css
@@ -41,17 +41,16 @@ bady {
 }
 
 /* tampilan laptop */
-@media {
-max-wide: 990px;
+@media(max-width: 992px) {
  
 }
-
-
+ 
 /* tampilan tablet */
-@media {
-max-wide: 660;
+@media(max-width: 768px) {
  
 }
-
-
+ 
 /* tampilan hp */
+@media(max-width: 576px) {
+ 
+}
