--- a/style.css
+++ b/style.css
@@ -42,15 +42,18 @@ bady {
 
 /* tampilan laptop */
 @media(max-width: 992px) {
- 
+ html {
+  font-size: 75%;
 }
  
 /* tampilan tablet */
 @media(max-width: 768px) {
- 
+ html {
+  font-size: 65%;
 }
  
 /* tampilan hp */
 @media(max-width: 576px) {
- 
+ html {
+  font-size: 60%;
 }
